# SystemImager

./: .gitignore  A_WARNING_ABOUT_TRUNK  COPYING  CREDITS  DEVELOPER_GUIDELINES  ERRATA  FAQ-HOWTO  Makefile  README  README.1ST  README.CTCS_burn-in_support  README.SystemImager_DHCP_options  README.burn-in_support  README.package_maintainers  README.ssh_support  README.unstable  RELEASE_ANNOUNCEMENT  RELEASE_STEPS  RPM-SPEC-FILE  TESTERS  TODO  VERSION  afterburner  autoinstall.kernel.config  autoinstall.kernel.support  config.inc.in  configure  file.listing.client  file.listing.server  file.listing.source  functions  install  install_lib  installbin  installclient  installdocs  installserver  local.cfg  makedist  si_install  (+2 more)
autoconf/: acinclude.m4  bootstrap  configure.ac
conf/: README.config_scheme  config_scheme.json
debian/: README.NMU  changelog  control  control.arch.in  control.in  copyright  deb822.py  mergechanges.py  rules  systemimager-boot-i386-standard.postinst  systemimager-boot-ppc64-standard.postinst  systemimager-boot-ppc64ydl-standard.postinst  systemimager-client.README.Debian  systemimager-client.conffiles  systemimager-initrd-dkf-i386.README.Debian  systemimager-initrd-dkf-i386.copyright  systemimager-initrd-i386.README.Debian  systemimager-initrd-i386.copyright  systemimager-initrd-template-alpha.postinst  systemimager-initrd-template-amd64.postinst  systemimager-initrd-template-i386.postinst  systemimager-initrd-template-ia64.postinst  systemimager-initrd-template-parisc.postinst  systemimager-initrd-template-ppc.postinst  systemimager-initrd-template-ppc64-iSeries.postinst  systemimager-initrd-template-ppc64-ps3.postinst  systemimager-initrd-template-ppc64.postinst  systemimager-initrd-template-ppc64ydl.postinst  systemimager-server.README.Debian  systemimager-server.conffiles  systemimager-server.postinst  systemimager-server.preinst  systemimager-webgui.postinst  systemimager-webgui.prerm  va-systemimager-client.README.Debian  va-systemimager.README.Debian  va-systemimager.conffiles  va-systemimager.postinst  va-systemimager.postrm
doc/: autoinstall.kernel.config  autoinstall.kernel.support  elilo.conf  local.cfg  media-api.txt  screencaptured_multicast_install.txt  systemimager_datasheet.sdw
etc/: UYOK.modules_to_exclude  UYOK.modules_to_include  autoinstallconf.template  autoinstallscript.template  bittorrent.conf  bittorrent.json  client.conf  cluster.xml  config  flamethrower.conf  getimage.exclude  httpd.conf  imagemanip.conf  imagemanip.perm  imaging-config.template  rsyncd.conf  systemimager.conf  updateclient.local.exclude
initrd_source/: Makefile  README.initrd  busybox-1.Config.h  busybox-2.Config.h  busybox.Config.h  dev_ls-lR  dupdevs.sh  initrd.rul  mk_new_initrd  mkboel.sh  mklibs  mklibs.bef  mklibs.sh  prep_initrd_dev
lib/: confedit
make.d/: README  bc.rul  boel_binaries.inc  ctcs.rul  discover-data.rul  discover.rul  dosfstools.rul  e2fsprogs.rul  gzip.rul  hfsutils.rul  jfsutils.rul  kernel.rul  kexec.rul  lvm.rul  mdadm.rul  openssh.rul  openssl.rul  parted.rul  pdisk.rul  popt.rul  raidtools.rul  reiserfsprogs.rul  sfdisk.rul  tar.rul  util-linux.rul  xfsprogs.rul  zlib.rul
patches/: 30.uclibc_pathfix.patch  README.patches  bittorrent.freezehack.patch  ctcs.10miscellaneous.patch  discover-data.10mpt.patch  discover-data.20cciss.patch  discover-data.30poweredge.patch  discover-data.40qlogicisp_to_qla1280.patch  discover-data.50megaraid.patch  discover-data.60dpt_i20.patch  discover-data.pci-26.lst.patch  discover-data.pci.lst.patch  discover.10discover_1.5-1.4.diff.patch  discover.10gcc3_3.patch  discover.pcmcia-error.patch  discover1-data.pci.lst.patch  dosfstools.10llseek.patch  dosfstools.15-2.8-loopsize.patch  dosfstools.20-2.8-autofat32.patch  dosfstools.22-2.11-assumeKernel26.patch  dosfstools.25-2.8-endian.patch  dosfstools.50-2.8-linuxheaders.patch  jfsutils.10buildfix.patch  linux.alpha,i386,hppa,ia64.80cramfs-initrd.patch  linux.alpha.81hardcode_rd_blocksize.patch  linux.alpha.90force_gcc3.2.patch  linux.alpha.config  linux.config  linux.hppa.config  linux.i386,ia64.21xfs-fixup.patch  linux.i386,ia64.25aic79xx.patch  linux.i386,ia64.27sk98lin_6.10.patch  linux.i386,ia64.30rtnetlink_buildfix.patch  linux.i386,ia64.35gcc3_3.patch  linux.i386,ia64.80cramfs-initrd.patch  linux.i386,ia64.mpt-2.02.00.patch  linux.i386,x86_64,ia64.70libata.patch  linux.i386,x86_64,ia64.80sata_sil.patch  linux.i386,x86_64.99optimize.patch  linux.i386.05jfs-2.4.7-1.0.11.patch  (+90 more)
rpm/: sysvinit.compile_portability.patch  sysvinit.debian_rules.patch
sbin/: CHANGES.addclients  addclients  cpimage  flamethrower  flamethrowerd  getimage  imagecast  imagemanip  install_siboot  lsimage  makeautoinstallcd  makeautoinstalldiskette  makedhcpserver  makedhcpstatic  mkautoinstallcd  mkautoinstalldiskette  mkautoinstallscript  mkbootmedia  mkbootpackage  mkbootserver  mkclientnetboot  mkdhcpserver  mkdhcpstatic  mkrsyncd_conf  mvimage  netbootmond  prepareclient  pushupdate  rmimage  si_addclients  si_clusterconfig  si_cpimage  si_getimage  si_imagemanip  si_installbtimage  si_lint  si_lsimage  si_mkautoinstallcd  si_mkautoinstalldisk  si_mkautoinstalldiskette  (+28 more)
ssh_files/: README  README.SSH_license  README.SSH_modifications  nsswitch.conf  sshd_config
systemd/: systemimager-server-bittorrent-seeder.service  systemimager-server-flamethrowerd.service  systemimager-server-monitord.service  systemimager-server-netbootmond.service  systemimager-server-rsyncd.service  systemimager-server-rsyncd.socket  systemimager-server-rsyncd@.service
tftpstuff/: kernel
tools/: backup.systemimager.uchicago.edu  getsource  makedevs  rpm2cpio  si_install
utilities/: convert_client_xml.sh  test_si_mkdhcpserver.sh
webgui/: COPYRIGHTS  client_console.php  client_list.php  config_scheme.json  edit_clusters.php  edit_config.php  edit_dhcp.php  functions.js  functions.php  health_console.php  index.php  manage_netboot.php  push_client_defs.php  push_client_logs.php  services.json  statuses.json
www.systemimager.org/: CREDITS  FAQ-HOWTO  TODO  index.html  upload
(+489 files in other folders)
